# simple-reduction

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: tests.yml
config/: config.yml
src/: create_test_data.py
src/simple_reduction/: __init__.py  invoice.py  invoice_redaction.py  util.py  version.py
tests/: __init__.py  test_invoice_processing.py  test_util.py
