[tool.poetry]
name = "simple-reduction"
version = "0.1.0"
description = "Application to do reduction of PDF invoices based on coordinates."
authors = ["Christian Baur <chrisbaur@hotmail.de>"]
license = "Proprietary"
packages = [
    { include = "simple_reduction", from = "src" },
]
include = ["src/simple_reduction/res/*"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
pymupdf = "^1.22.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
fpdf = "^1.7.2"
pdf2image = "^1.16.3"
pillow = "^9.5.0"
black = "^22.10"
pre-commit = "^2.20"
pytest-cov = "^4.0"
faker = "^18.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
